--- a/src/__automatic-basket-02.html
+++ b/src/__automatic-basket-02.html
@@ -127,7 +127,7 @@
 																	<div class="label-holder">
 																		<label for="ordering-city-field">Город <span class="form-mark">*</span></label>
 																	</div>
-																	<input type="email" id="ordering-city-field"/>
+																	<input type="text" id="ordering-city-field"/>
 																	<span class="error-note">Поле обязательное для заполнения</span>
 																	<span class="confirm-note">&nbsp;</span>
 																</div>
@@ -135,7 +135,7 @@
 																	<div class="label-holder">
 																		<label for="ordering-street-field">Улица <span class="form-mark">*</span></label>
 																	</div>
-																	<input type="email" id="ordering-street-field"/>
+																	<input type="text" id="ordering-street-field"/>
 																	<span class="error-note">Поле обязательное для заполнения</span>
 																	<span class="confirm-note">&nbsp;</span>
 																</div>
