--- a/src/__automatic-typography.html
+++ b/src/__automatic-typography.html
@@ -50,6 +50,14 @@
 								})
 								<!--entry-text end-->
 
+								<!--btn-popup-->
+								@@include('_typography_components.tpl', {
+								"component": "popupOpen"
+								})
+								<!--btn-popup end-->
+
+								<div class="user-spacer">&nbsp;</div>
+
 								<!--paragraphs-->
 								@@include('_typography_components.tpl', {
 								"component": "paragraphs"
@@ -325,7 +333,7 @@
 										padding: 18px 0 0;
 										background-color: white;
 										box-shadow: 2px 2px 35px rgba(0, 0, 0, 0.2);
-										z-index: 99999;
+										z-index: 999;
 										font-size: 14px;
 										line-height: 1.4;
 										/*counter-reset: items;*/
