--- a/src/automatic-index_v1_20170227.html
+++ b/src/automatic-index_v1_20170227.html
@@ -841,7 +841,7 @@
 		<!--login popup end-->
 		<!--HEADER end-->
 		<!--TOP PANEL-->
-		<aside class="top-panel top-panel--fixed">
+		<aside class="top-panel top-panel--alt">
 			<div class="top-panel-holder">
 				<div class="logo-alt">
 					<a href="automatic-index.html">
@@ -928,33 +928,78 @@
 				<div class="main__holder">
 					<!--CONTENT-->
 					<div class="content-wrap">
-						<div class="content">
+						<div class="content user-content">
 							<div class="ea-main-sections ea-main-sections-js">
-								<section class="ea-main-section ea-full-page-js ea-main-section--main-slider">
+								<section class="ea-main-section ea-full-page-js ea-main-section--entry active">
+									<div class="ea-main-section__container" style="background-image: url(img/bg-entry-ea.jpg);">
+										<div class="ea-main-section__align">
+											<div class="ea-main-section__layout ea-main-max-width">
+												<div class="ea-main-section__title">
+													<h2>Интернет-магазин электротехники и электротоваров</h2>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="odds">
+										<div class="ea-main-section__layout ea-main-max-width">
+											<div class="odds__list">
+												<div class="odds__item">
+													<div class="odds__inner">
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448.1 448"><path d="M399.9 314.8c-3.3-2.2-8-1.4-10.3 2l-41.8 60 -29.5-24.2c-3.2-2.6-7.9-2.2-10.5 1s-2.2 7.9 1 10.5l35.8 29.3c1.3 1.1 3 1.7 4.7 1.7 0.4 0 0.7 0 1-0.1 2.1-0.3 3.9-1.4 5.1-3.1l46.4-66.7C404.2 321.8 403.3 317.1 399.9 314.8zM107.8 328.7l-5.3 5.3c-2.9 2.9-2.9 7.6 0 10.5 1.5 1.5 3.4 2.2 5.3 2.2 1.9 0 3.8-0.7 5.3-2.2l5.3-5.3c2.9-2.9 2.9-7.6 0-10.5C115.5 325.8 110.7 325.8 107.8 328.7zM67.2 215.6h-7.5c-4.1 0-7.5 3.4-7.5 7.5 0 4.1 3.4 7.5 7.5 7.5h7.5c4.1 0 7.5-3.4 7.5-7.5C74.7 219 71.3 215.6 67.2 215.6zM224 73.8c4.1 0 7.5-3.4 7.5-7.5v-7.5c0-4.1-3.4-7.5-7.5-7.5 -4.1 0-7.5 3.4-7.5 7.5v7.5C216.5 70.4 219.9 73.8 224 73.8zM224 372.4c-4.1 0-7.5 3.4-7.5 7.5v7.5c0 4.1 3.4 7.5 7.5 7.5 4.1 0 7.5-3.4 7.5-7.5v-7.5C231.5 375.8 228.1 372.4 224 372.4zM434.3 301.2c9-24.7 13.7-50.7 13.7-77.2C448 100.5 347.5 0 224 0S0 100.5 0 224s100.5 224 224 224c26.5 0 52.5-4.7 77.3-13.8 14.6 8.7 31.5 13.8 49.7 13.8 53.5 0 97.1-43.5 97.1-97.1C448.1 332.8 443 315.8 434.3 301.2zM350.9 433.1c-16.7 0-32.1-5-45-13.5 -2.8-1.8-5.3-3.7-7.8-5.8 -0.4-0.4-0.9-0.8-1.3-1.2 -1.9-1.6-3.7-3.4-5.3-5.2 -0.7-0.7-1.5-1.6-2.2-2.4 -1.3-1.5-2.6-3.1-3.8-4.7 -0.7-0.9-1.3-1.7-2-2.6 -1.5-2.2-2.9-4.5-4.3-6.8 -0.4-0.6-0.7-1.2-1-1.9 -1.3-2.4-2.4-4.8-3.4-7.2 -0.4-1-0.7-1.9-1-2.9 -0.7-1.9-1.3-4-1.9-6 -0.3-1-0.6-2.1-0.8-3.1 -0.5-2.1-0.9-4.3-1.2-6.4 -0.1-1-0.3-1.9-0.4-2.8 -0.5-3.2-0.7-6.3-0.7-9.6 0-45.3 36.8-82.1 82.1-82.1 3.2 0 6.3 0.2 9.5 0.6 1 0.1 1.9 0.3 2.8 0.4 2.2 0.3 4.3 0.7 6.4 1.2 1 0.2 2.2 0.5 3.2 0.8 2 0.5 4 1.2 6 1.9 1 0.4 1.9 0.7 2.9 1 2.5 1 4.9 2.1 7.2 3.4 0.6 0.3 1.3 0.7 1.9 1 2.3 1.3 4.6 2.7 6.8 4.3 0.9 0.6 1.8 1.3 2.6 2 1.6 1.2 3.2 2.5 4.7 3.8 0.8 0.7 1.6 1.4 2.4 2.2 1.8 1.7 3.5 3.4 5.1 5.3 0.4 0.4 0.8 0.8 1.2 1.3 2.1 2.5 4 5.1 5.8 7.8 8.6 12.9 13.6 28.4 13.6 45C433.1 396.3 396.3 433.1 350.9 433.1zM423.5 286.6c-0.6-0.7-1.3-1.3-1.9-1.9 -1.2-1.3-2.5-2.6-3.7-3.8 -1.2-1.1-2.4-2.2-3.6-3.3 -1.2-1-2.4-2-3.7-3s-2.8-2.1-4.2-3.1c-1.2-0.8-2.5-1.6-3.7-2.5 -1.5-1-3-1.9-4.5-2.8 -1.3-0.7-2.7-1.4-4-2.1 -1.5-0.7-3.1-1.6-4.6-2.2 -1.6-0.7-3.1-1.3-4.7-1.8 -1.5-0.5-2.9-1.1-4.4-1.6 -1.8-0.6-3.7-1-5.5-1.5 -1.3-0.4-2.6-0.7-4-1 -2.2-0.4-4.5-0.7-6.7-1.1 -1-0.1-2.1-0.4-3.1-0.4 -3.4-0.3-6.8-0.5-10.2-0.5 -53.5 0-97.1 43.5-97.1 97.1 0 3.4 0.2 6.9 0.5 10.2 0.1 1 0.4 2.1 0.5 3.2 0.3 2.2 0.6 4.5 1 6.7 0.3 1.3 0.7 2.7 1 4 0.4 1.9 0.9 3.7 1.5 5.5 0.4 1.5 1 3 1.6 4.5 0.6 1.6 1.1 3.1 1.8 4.6 0.7 1.6 1.5 3.1 2.2 4.6 0.7 1.3 1.3 2.7 2.1 4 0.9 1.6 1.8 3.1 2.8 4.6 0.8 1.3 1.6 2.5 2.4 3.7 1 1.4 2.1 2.8 3.1 4.2 1 1.2 1.9 2.4 2.9 3.6 1 1.3 2.2 2.5 3.3 3.7 1.2 1.3 2.5 2.5 3.7 3.7 1 0.3 1.5 1 2.2 1.6 -20.2 6.3-41.1 9.6-62.5 9.6 -115.3 0-209.1-93.8-209.1-209.1S108.7 14.9 224 14.9 433.1 108.7 433.1 224C433.1 245.4 429.9 266.3 423.5 286.6zM380.8 230.6h7.5c4.1 0 7.5-3.4 7.5-7.5 0-4.1-3.4-7.5-7.5-7.5h-7.5c-4.1 0-7.5 3.4-7.5 7.5C373.3 227.2 376.7 230.6 380.8 230.6zM335 101.7l-5.3 5.3c-2.9 2.9-2.9 7.6 0 10.5 1.4 1.4 3.2 2.2 5.2 2.2 1.9 0 3.8-0.7 5.3-2.2l5.3-5.3c2.9-2.9 2.9-7.6 0-10.5C342.6 98.8 337.9 98.8 335 101.7zM113.1 101.7c-2.9-2.9-7.6-2.9-10.5 0 -2.9 2.9-2.9 7.6 0 10.5l5.3 5.3c1.5 1.5 3.4 2.2 5.3 2.2 1.9 0 3.8-0.7 5.3-2.2 2.9-2.9 2.9-7.6 0-10.5L113.1 101.7zM231.5 194.3v-75.7c0-4.1-3.4-7.5-7.5-7.5 -4.1 0-7.5 3.4-7.5 7.5v75.7c-10.8 2.8-19.2 11.3-21.7 22.3h-53c-4.1 0-7.5 3.4-7.5 7.5 0 4.1 3.4 7.5 7.5 7.5h53.6c3.7 12.4 15 21.5 28.5 21.5 16.5 0 29.9-13.4 29.9-29.9C253.9 209.2 244.3 197.6 231.5 194.3zM224 238c-8.2 0-14.9-6.7-14.9-14.9 0-8.2 6.7-14.9 14.9-14.9 8.2 0 14.9 6.7 14.9 14.9C238.9 231.3 232.2 238 224 238z"></path></svg>
+														<div class="odds__title">Высокая скорость при выполнении заказа</div>
+													</div>
+												</div>
+												<div class="odds__item">
+													<div class="odds__inner">
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 381.6 317.3"><path d="M309.5 68.9h-75.9V0H0v278.3h26.4l0.1 0.9c3.1 21.7 22 38.1 43.9 38.1 21.9 0 40.8-16.4 43.9-38.1l0.1-0.9h153l0.1 0.9c3.1 21.7 22 38.1 43.9 38.1 21.9 0 40.7-16.4 44-38.1l0.1-0.9h26.2V141.1L309.5 68.9zM11.4 81.4h113.2V56.6l51.9 51.9 -47.2 47.2h-0.1v-20H11.4V81.4zM11.4 147.1h106.4v36.3l74.9-74.9 -79.6-79.6v41H11.4V11.4h210.7v195.2H11.4V147.1zM70.3 305.8c-18.2 0-33-14.8-33-33 0-18.2 14.8-33 33-33s33 14.8 33 33S88.5 305.8 70.3 305.8zM311.4 305.8c-18.2 0-33-14.8-33-33 0-18.2 14.8-33 33-33s33 14.8 33 33S329.6 305.8 311.4 305.8zM370.2 266.8h-14.8l-0.1-0.8c-3.3-21.5-22.2-37.7-43.9-37.7 -21.8 0-40.6 16.2-44.1 37.8l-0.1 0.8h-153l-0.1-0.8c-3.3-21.5-22.2-37.7-43.9-37.7s-40.6 16.2-43.9 37.7l-0.1 0.8H11.4v-48.8h222.2V80.3h71.1l65.5 65.5V266.8zM311.4 254.2c-10.2 0-18.6 8.4-18.6 18.6s8.3 18.6 18.6 18.6c10.2 0 18.6-8.4 18.6-18.6S321.7 254.2 311.4 254.2zM311.4 280c-4 0-7.2-3.2-7.2-7.2s3.2-7.2 7.2-7.2c3.9 0 7.2 3.2 7.2 7.2S315.4 280 311.4 280zM260.8 107.3v82.3h82.3v-32.3l-50-50H260.8zM331.8 178.3h-59.5v-59.5h16.2l43.3 43.3V178.3zM70.3 254.2c-10.2 0-18.6 8.4-18.6 18.6s8.3 18.6 18.6 18.6 18.6-8.4 18.6-18.6S80.6 254.2 70.3 254.2zM70.3 280c-4 0-7.2-3.2-7.2-7.2s3.2-7.2 7.2-7.2 7.2 3.2 7.2 7.2S74.3 280 70.3 280z"></path></svg>
+														<div class="odds__title">Прямые поставки от производителя</div>
+													</div>
+												</div>
+												<div class="odds__item">
+													<div class="odds__inner">
+														<svg width="50" height="50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 431 386.2"><path d="M163.4 240.8c18.4 0 33.4-15 33.5-33.5v-7.9c-0.7-18.1-15.3-32.3-33.5-32.3 -0.4 0-0.8 0-1.2 0 -17.5 0.6-31.7 14.8-32.3 32.3v7.9c0 18.4 15 33.4 33.5 33.5H163.4zM144.3 207.4v-8l0-0.2c0.6-10.1 8.9-18.1 19.1-18.1 0.3 0 0.7 0 1.1 0 9.7 0.5 17.5 8.3 18 18l0 0.1v8.1c0 10.5-8.6 19-19.1 19C152.9 226.4 144.3 217.9 144.3 207.4zM267.8 253.5h-0.2c-18.5 0-33.5 15.1-33.5 33.5v8.1c0 18.4 15 33.4 33.5 33.5 0 0 0 0 0 0 18.4 0 33.5-15 33.5-33.5l0-8C301.2 268.7 286.2 253.6 267.8 253.5zM286.7 295c0 10.5-8.6 19-19.1 19 -10.5 0-19-8.6-19-19.1v-7.9l0-0.2c0.8-9.9 9.1-17.6 19-17.6 0.5 0 1 0 1.5 0.1 9.5 0.7 16.8 8.1 17.6 17.6l0 0.2V295zM428.7 197.7l-87.3-82.1V30.4c0-4-3.2-7.2-7.2-7.2h-50.6c-4 0-7.2 3.2-7.2 7.2v24.1L220.4 1.9C219 0.7 217.3 0 215.5 0c-1.8 0-3.6 0.7-4.9 1.9L2.3 197.7c-2.9 2.7-3 7.3-0.3 10.2 1.4 1.4 3.3 2.3 5.2 2.3h59.2v161.7H22.9c-4 0-7.2 3.2-7.2 7.2 0 4 3.2 7.2 7.2 7.2h385.3c4 0 7.2-3.2 7.2-7.2 0-4-3.2-7.2-7.2-7.2h-43.6V210.1h59.2c1.9 0 3.7-0.8 5.1-2.1 1.4-1.4 2.1-3.2 2.1-5.1C431 200.9 430.2 199 428.7 197.7zM357.4 195.7v0c-4 0-7.2 3.2-7.2 7.2v168.9H80.8V202.9c0-4-3.2-7.2-7.2-7.2H25.4L215.5 17l63.2 59.4c1.3 1.3 3.1 1.9 4.9 1.9 2 0 3.9-0.8 5.3-2.3 1.3-1.3 1.9-3.1 1.9-4.9V37.6h36.2v81.1c0 2 0.8 3.9 2.3 5.2l76.3 71.8H357.4zM273.2 180.1c-0.2-1.9-1.2-3.6-2.7-4.8l0 0c-1.3-1-2.8-1.5-4.4-1.5 -2.3 0-4.4 1-5.7 2.8l-101.1 132.2c-1.2 1.5-1.6 3.4-1.4 5.3 0.3 1.9 1.3 3.6 2.8 4.7 1.3 0.9 2.7 1.4 4.3 1.4 2.3 0 4.4-1 5.8-2.9L271.8 185.4C273 183.9 273.5 182 273.2 180.1z"></path></svg>
+														<div class="odds__title">Выгодные цены и скидки</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</section>
+								<section class="ea-main-section ea-full-page-js ea-main-section--promo">
 									<div class="ea-main-section__container">
 										<div class="ea-main-section__align">
 											<div class="ea-main-section__layout">
 												<!--<div class="ea-main-section__title"><h2>Акции</h2></div>-->
 												<div class="ea-main-section__holder">
-													<div class="ea-main-slider ea-main-slider-js">
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
-														</a>
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
-														</a>
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
-														</a>
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
-														</a>
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
-														</a>
-														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
-														</a>
+													<div class="ea-promo ea-promo-slider-js">
+														<div class="ea-promo-banners ea-promo-banners-js">
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/__temp-img-content-carousel-01.jpg" alt="image description" />
+															</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+															</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+															</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+															</a>
+															<a href="automatic-catalog.html" class="ea-promo-banners__item">
+																<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+															</a>
+														</div>
+														<div class="ea-promo-thumbs ea-promo-thumbs-js">
+															<div class="ea-promo-thumbs__item" title="Кабель ВВГ H2LS"><span>Кабель ВВГ H2LS</span></div>
+															<div class="ea-promo-thumbs__item" title="Трансформаторы ТМГ"><span>Трансформаторы ТМГ</span></div>
+															<div class="ea-promo-thumbs__item" title="Светодиодная панель"><span>Светодиодная панель</span></div>
+															<div class="ea-promo-thumbs__item" title="Лампа светодиод"><span>Лампа светодиод</span></div>
+															<div class="ea-promo-thumbs__item" title="Летняя распродажа"><span>Летняя распродажа</span></div>
+															<div class="ea-promo-thumbs__item" title="Лампа светодиод"><span>Лампа светодиод</span></div>
+														</div>
 													</div>
 												</div>
 											</div>
