--- a/src/automatic-index.html
+++ b/src/automatic-index.html
@@ -938,22 +938,64 @@
 												<div class="ea-main-section__holder">
 													<div class="ea-main-slider ea-main-slider-js">
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__img">
+																	<img src="img/img-promo-ea-01.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__info">
+																	<div class="ea-main-slider__info__layout">
+																		<div>
+																			<div class="ea-main-slider__title">Экскаваторы- погрузчики</div>
+																			<div class="ea-main-slider__text">Многоцелевая высокопроизводительная</div>
+																		</div>
+																		<span class="btn-default">Смотреть прайс</span>
+																	</div>
+																</div>
+																<div class="ea-main-slider__img">
+																	<img src="img/img-promo-ea-02.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__info align-right">
+																	<div class="ea-main-slider__info__layout">
+																		<div>
+																			<div class="ea-main-slider__title">Экскаваторы- погрузчики</div>
+																			<div class="ea-main-slider__text">Многоцелевая высокопроизводительная</div>
+																		</div>
+																		<span class="btn-default">Смотреть прайс</span>
+																	</div>
+																</div>
+																<div class="ea-main-slider__img">
+																	<img src="img/img-promo-ea-02.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__img">
+																	<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__img">
+																	<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 														<a href="automatic-catalog.html" class="ea-main-slider__item">
-															<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															<div class="ea-main-slider__inner">
+																<div class="ea-main-slider__img">
+																	<img src="img/img-promo-ea-01.jpg" alt="image description" />
+																</div>
+															</div>
 														</a>
 													</div>
 												</div>
@@ -965,18 +1007,16 @@
 									<div class="ea-main-section__container">
 										<div class="ea-main-section__align">
 											<div class="ea-main-section__layout">
-												<div class="ea-main-section__title">
-													<h2>Акции и предложения</h2>
-												</div>
+												<!--<div class="ea-main-section__title"><h2>Акции и предложения</h2></div>-->
 												<div class="ea-main-section__holder">
 													<div class="share-container js-tabs" data-auto-height="true">
 														<div class="share__thumbs">
 															<div class="share-nav">
 																<div class="share-nav__item">
-																	<a href="#share-leaders" class="js-tab-anchor active-tab">Лидеры продаж</a>
+																	<a href="#share-leaders" class="js-tab-anchor active-tab">Новинки</a>
 																</div>
 																<div class="share-nav__item">
-																	<a href="#share-novelties" class="js-tab-anchor">Новинки</a>
+																	<a href="#share-novelties" class="js-tab-anchor">Акции</a>
 																</div>
 															</div>
 														</div>
@@ -986,39 +1026,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																			</div>
-																			<div class="share-list__content">
-																				<div class="share-list__img">
-																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
-																				</div>
-																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
-																			</div>
-																			<div class="share-list__price">
-																				<div class="cur">300 руб.</div>
-																			</div>
-																		</a>
-																	</div>
-																	<div class="share-list__item">
-																		<a href="#" class="share-list__inner">
-																			<div class="share-list__labels">
-																				<div class="share-list__label label-sale">%</div>
-																				<div class="share-list__label label-hit">Хит</div>
-																			</div>
-																			<div class="share-list__content">
-																				<div class="share-list__img">
-																					<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
-																				</div>
-																				<div class="share-list__title">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</div>
-																			</div>
-																			<div class="share-list__price">
-																				<div class="cur">1 150 руб.</div>
-																				<div class="old">1 200 руб.</div>
-																			</div>
-																		</a>
-																	</div>
-																	<div class="share-list__item">
-																		<a href="#" class="share-list__inner">
-																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1035,7 +1043,24 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																				<div class="share-list__label label-sale">%</div>
+																				<div class="share-list__label label-new">new</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-02.jpg" alt="Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)" />
+																				</div>
+																				<div class="share-list__title">Кабель внутренний SAS(SFF-8087)-4хSATA (угловой) 0,5 м( Mini-SASх4-4хSATA)</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">1 150 руб.</div>
+																				<div class="old">1 200 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1052,6 +1077,23 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
+																				</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1068,6 +1110,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1083,7 +1126,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																				<div class="share-list__label label-hit">Хит</div>
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1100,6 +1143,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1116,6 +1160,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1129,6 +1174,12 @@
 																			</div>
 																		</a>
 																	</div>
+																</div>
+																<div class="ea-main-section__footer">
+																	<a href="#" class="btn-outline btn-with-icon">
+																		<span>Все новинки</span>
+																		<i class="depict-plus">&nbsp;</i>
+																	</a>
 																</div>
 															</div>
 															<div class="share__panel js-tab-content" id="share-novelties">
@@ -1139,13 +1190,12 @@
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
-																					<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
+																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
 																				</div>
-																				<div class="share-list__title">АВВГ 4Х50</div>
+																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
 																			</div>
 																			<div class="share-list__price">
 																				<div class="cur">300 руб.</div>
-																				<div class="old">450 руб.</div>
 																			</div>
 																		</a>
 																	</div>
@@ -1170,6 +1220,22 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																			</div>
+																			<div class="share-list__content">
+																				<div class="share-list__img">
+																					<img src="img/img-products-03.jpg" alt="АВВГ 4Х50" />
+																				</div>
+																				<div class="share-list__title">АВВГ 4Х50</div>
+																			</div>
+																			<div class="share-list__price">
+																				<div class="cur">300 руб.</div>
+																				<div class="old">450 руб.</div>
+																			</div>
+																		</a>
+																	</div>
+																	<div class="share-list__item">
+																		<a href="#" class="share-list__inner">
+																			<div class="share-list__labels">
 																				<div class="share-list__label label-sale">%</div>
 																			</div>
 																			<div class="share-list__content">
@@ -1181,21 +1247,6 @@
 																			<div class="share-list__price">
 																				<div class="cur">1 300 руб.</div>
 																				<div class="old">1 370 руб.</div>
-																			</div>
-																		</a>
-																	</div>
-																	<div class="share-list__item">
-																		<a href="#" class="share-list__inner">
-																			<div class="share-list__labels">
-																			</div>
-																			<div class="share-list__content">
-																				<div class="share-list__img">
-																					<img src="img/img-products-01.jpg" alt="Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ" />
-																				</div>
-																				<div class="share-list__title">Резьбовой крепежный элемент РКв-20 (внутренняя резьба) ТДМ</div>
-																			</div>
-																			<div class="share-list__price">
-																				<div class="cur">300 руб.</div>
 																			</div>
 																		</a>
 																	</div>
@@ -1280,7 +1331,67 @@
 																		</a>
 																	</div>
 																</div>
+																<div class="ea-main-section__footer">
+																	<a href="#" class="btn-outline btn-with-icon">
+																		<span>Все акции</span>
+																		<i class="depict-plus">&nbsp;</i>
+																	</a>
+																</div>
 															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</section>
+								<section class="ea-main-section ea-full-page-js ea-main-section--stock">
+									<div class="ea-main-section__container">
+										<div class="ea-main-section__align">
+											<div class="ea-main-section__layout">
+												<div class="ea-main-section__title">
+													<h2>Акции</h2>
+												</div>
+												<div class="ea-main-section__holder">
+													<div class="ea-stock-slider ea-stock-slider-js">
+														<div class="ea-stock-slider__item">
+															<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+																<div class="ea-stock-slider__info">
+																	<div class="ea-stock-slider__info__layout">
+																		<div>
+																			<div class="ea-stock-slider__title">Высокая скорость при выполнении заказа</div>
+																			<div class="ea-stock-slider__text">Высокая скорость при выполнении заказа</div>
+																		</div>
+																		<span class="btn-outline">Купить</span>
+																	</div>
+																</div>
+																<div class="ea-stock-slider__img">
+																	<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+																</div>
+															</a>
+														</div>
+														<div class="ea-stock-slider__item">
+															<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+																<div class="ea-stock-slider__info">
+																	<div class="ea-stock-slider__info__layout">
+																		<div>
+																			<div class="ea-stock-slider__title">Высокая скорость при выполнении заказа</div>
+																			<div class="ea-stock-slider__text">Высокая скорость при выполнении заказа</div>
+																		</div>
+																		<span class="btn-outline">Купить</span>
+																	</div>
+																</div>
+																<div class="ea-stock-slider__img">
+																	<img src="img/img-promo-ea-02.jpg" alt="image description" />
+																</div>
+															</a>
+														</div>
+														<div class="ea-stock-slider__item">
+															<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+																<div class="ea-stock-slider__img">
+																	<img src="img/img-promo-ea-01.jpg" alt="image description" />
+																</div>
+															</a>
 														</div>
 													</div>
 												</div>
@@ -1291,7 +1402,7 @@
 								<section class="ea-main-section ea-full-page-js ea-main-section--news">
 									<div class="ea-main-section__container" style="background-image: url(img/bg-news-ea.jpg);">
 										<div class="ea-main-section__align">
-											<div class="ea-main-section__layout ea-main-max-width">
+											<div class="ea-main-section__layout">
 												<div class="ea-main-section__title">
 													<h2>Новости</h2>
 												</div>
