--- a/src/automatic-index_v1_20170227.html
+++ b/src/automatic-index_v1_20170227.html
@@ -1181,6 +1181,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1197,8 +1198,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																				<div class="share-list__label label-sale">%</div>
-																				<div class="share-list__label label-hit">Хит</div>
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1215,7 +1215,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																				<div class="share-list__label label-sale">%</div>
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1232,6 +1232,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1247,6 +1248,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1263,6 +1265,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1278,7 +1281,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
-																				<div class="share-list__label label-hit">Хит</div>
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1295,6 +1298,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
@@ -1311,6 +1315,7 @@
 																	<div class="share-list__item">
 																		<a href="#" class="share-list__inner">
 																			<div class="share-list__labels">
+																				<div class="share-list__label label-new">new</div>
 																			</div>
 																			<div class="share-list__content">
 																				<div class="share-list__img">
