--- a/src/__automatic-index.html
+++ b/src/__automatic-index.html
@@ -34,22 +34,64 @@
 											<div class="ea-main-section__holder">
 												<div class="ea-main-slider ea-main-slider-js">
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/img-promo-ea-01.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__img">
+																<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/img-promo-ea-01.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__info">
+																<div class="ea-main-slider__info__layout">
+																	<div>
+																		<div class="ea-main-slider__title">Экскаваторы- погрузчики</div>
+																		<div class="ea-main-slider__text">Многоцелевая высокопроизводительная</div>
+																	</div>
+																	<span class="btn-default">Смотреть прайс</span>
+																</div>
+															</div>
+															<div class="ea-main-slider__img">
+																<img src="img/img-promo-ea-02.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/__temp-img-content-carousel-02.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__info align-right">
+																<div class="ea-main-slider__info__layout">
+																	<div>
+																		<div class="ea-main-slider__title">Экскаваторы- погрузчики</div>
+																		<div class="ea-main-slider__text">Многоцелевая высокопроизводительная</div>
+																	</div>
+																	<span class="btn-default">Смотреть прайс</span>
+																</div>
+															</div>
+															<div class="ea-main-slider__img">
+																<img src="img/img-promo-ea-02.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__img">
+																<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__img">
+																<img src="img/__temp-img-content-carousel-04.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 													<a href="automatic-catalog.html" class="ea-main-slider__item">
-														<img src="img/img-promo-ea-01.jpg" alt="image description" />
+														<div class="ea-main-slider__inner">
+															<div class="ea-main-slider__img">
+																<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															</div>
+														</div>
 													</a>
 												</div>
 											</div>
@@ -61,16 +103,16 @@
 								<div class="ea-main-section__container">
 									<div class="ea-main-section__align">
 										<div class="ea-main-section__layout">
-											<div class="ea-main-section__title"><h2>Акции и предложения</h2></div>
+											<!--<div class="ea-main-section__title"><h2>Акции и предложения</h2></div>-->
 											<div class="ea-main-section__holder">
 												<div class="share-container js-tabs" data-auto-height="true">
 													<div class="share__thumbs">
 														<div class="share-nav">
 															<div class="share-nav__item">
-																<a href="#share-leaders" class="js-tab-anchor active-tab">Лидеры продаж</a>
+																<a href="#share-leaders" class="js-tab-anchor active-tab">Новинки</a>
 															</div>
 															<div class="share-nav__item">
-																<a href="#share-novelties" class="js-tab-anchor">Новинки</a>
+																<a href="#share-novelties" class="js-tab-anchor">Акции</a>
 															</div>
 														</div>
 													</div>
@@ -78,14 +120,78 @@
 													<div class="share__panels js-tab-container">
 														<div class="share__panel js-tab-content" id="share-leaders">
 															<div class="share-list share-slider-js">
-																@@loop("_tpl_share-items.tpl", "includes-json/share-items-share.json")
+																@@loop("_tpl_share-items.tpl", "includes-json/share-items-news.json")
+															</div>
+															<div class="ea-main-section__footer">
+																<a href="#" class="btn-outline btn-with-icon">
+																	<span>Все новинки</span>
+																	<i class="depict-plus">&nbsp;</i>
+																</a>
 															</div>
 														</div>
 														<div class="share__panel js-tab-content" id="share-novelties">
 															<div class="share-list share-slider-js">
-																@@loop("_tpl_share-items.tpl", "includes-json/share-items-news.json")
+																@@loop("_tpl_share-items.tpl", "includes-json/share-items-share.json")
+															</div>
+															<div class="ea-main-section__footer">
+																<a href="#" class="btn-outline btn-with-icon">
+																	<span>Все акции</span>
+																	<i class="depict-plus">&nbsp;</i>
+																</a>
 															</div>
 														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</section>
+							<section class="ea-main-section ea-full-page-js ea-main-section--stock">
+								<div class="ea-main-section__container">
+									<div class="ea-main-section__align">
+										<div class="ea-main-section__layout">
+											<div class="ea-main-section__title"><h2>Акции</h2></div>
+											<div class="ea-main-section__holder">
+												<div class="ea-stock-slider ea-stock-slider-js">
+													<div class="ea-stock-slider__item">
+														<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+															<div class="ea-stock-slider__info">
+																<div class="ea-stock-slider__info__layout">
+																	<div>
+																		<div class="ea-stock-slider__title">Высокая скорость при выполнении заказа</div>
+																		<div class="ea-stock-slider__text">Высокая скорость при выполнении заказа</div>
+																	</div>
+																	<span class="btn-outline">Купить</span>
+																</div>
+															</div>
+															<div class="ea-stock-slider__img">
+																<img src="img/__temp-img-content-carousel-03.jpg" alt="image description" />
+															</div>
+														</a>
+													</div>
+													<div class="ea-stock-slider__item">
+														<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+															<div class="ea-stock-slider__info">
+																<div class="ea-stock-slider__info__layout">
+																	<div>
+																		<div class="ea-stock-slider__title">Высокая скорость при выполнении заказа</div>
+																		<div class="ea-stock-slider__text">Высокая скорость при выполнении заказа</div>
+																	</div>
+																	<span class="btn-outline">Купить</span>
+																</div>
+															</div>
+															<div class="ea-stock-slider__img">
+																<img src="img/img-promo-ea-02.jpg" alt="image description" />
+															</div>
+														</a>
+													</div>
+													<div class="ea-stock-slider__item">
+														<a href="automatic-catalog.html" class="ea-stock-slider__inner">
+															<div class="ea-stock-slider__img">
+																<img src="img/img-promo-ea-01.jpg" alt="image description" />
+															</div>
+														</a>
 													</div>
 												</div>
 											</div>
@@ -96,7 +202,7 @@
 							<section class="ea-main-section ea-full-page-js ea-main-section--news">
 								<div class="ea-main-section__container" style="background-image: url(img/bg-news-ea.jpg);">
 									<div class="ea-main-section__align">
-										<div class="ea-main-section__layout ea-main-max-width">
+										<div class="ea-main-section__layout">
 											<div class="ea-main-section__title"><h2>Новости</h2></div>
 											<div class="ea-main-section__holder">
 												<div class="news-previews">
